--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
     box-shadow: 10px 0 20px #bbbbbb, -10px 0 20px #bbbbbb;
 }
 
-h2, h1, h3 {
+h2, h1, h3, h4, h5 {
     font-family: 'Josefin Sans', sans-serif;
 }
 
@@ -77,6 +77,34 @@ p {
     width: 60%;
     margin: 15px 20% 15px 20%;
     
+}
+
+#experience .job-about .job-stats * {
+    margin: 0 0 15px 0;
+}
+
+#experience .job-about > div{
+    margin-top: 0;
+    margin-bottom: 0;
+    display: inline-block;
+}
+
+#experience .job {
+	margin-bottom: 40px;
+}
+
+#experience .job .job-about .job-stats {
+    width: calc(65% - 4px);
+}
+
+#experience .job-logo-div {
+    max-width: 35%;
+}
+
+#experience .logo {
+    box-shadow: 0px 0 7px #bbbbbb;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #contact {
