--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 #background {
     width: 100%;
     background-color: #eeeeee;
+    padding-bottom: 100px;
 }
 
 #nav-bar {
@@ -39,6 +40,7 @@ body {
     display: block;
     height: 100%;
     text-decoration: none;
+    padding-top: 10px;
     color: #888888;
     margin-top: 5px;
 }
@@ -109,6 +111,7 @@ p {
 
 #contact {
     text-align: center;
+    padding-bottom: 15px;
 }
 
 #contact img {
