--- a/style.css
+++ b/style.css
@@ -156,12 +156,10 @@ p {
 	color: #666666;
 }
 
-#test {
-	background-image: url('img/pfg_bw.png');
+.bglogo{
 	background-repeat: no-repeat;
 	background-position: center center;
-	opacity: 0.6;
-	height: 200px;	
+	background-size: 50% auto;
 }
 
 .bgpic {
